<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="#00cc7a">

    <TextView
        android:id="@+id/tv1"
        
        android:textSize="20sp"
        
        android:layout_width="match_parent"
        android:layout_height="50dp" />
    
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content" >
         
         <EditText
             
             android:id="@+id/edit"
            android:inputType="text"
           
            
             
            android:layout_width="match_parent"
                   android:layout_margin="2sp"
            
            android:layout_height="wrap_content"
            android:layout_weight="5"
             />

         <Button
             android:id="@+id/bx"
                    android:layout_margin="2sp"
            
            	
             android:layout_width="62dp"
             android:layout_height="48dp"
             android:layout_weight="2"
             android:background="@drawable/b1"
            
            
             android:text="@string/x" 
            />
       		
            <Button
             android:id="@+id/br"
                   android:layout_margin="2sp"
            	
             android:layout_width="62dp"
             android:layout_height="48dp"
             android:layout_weight="2"
             android:background="@drawable/b1"
            
            
             android:text="@string/r" 
            />
       		
     </LinearLayout>
     
      
      <LinearLayout 
          
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:orientation="horizontal"  >
          
          
         
    <LinearLayout 
        
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:orientation="vertical" 
          >
          
          
  	<LinearLayout 
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content" 
	    	>
	    
	     <Button
	         
	         android:id="@+id/b1"
	         android:background="@drawable/b1"
	        
	         android:layout_margin="2sp"
	        
	         
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            
            android:text="@string/a"/>
	     <Button
	      
	          android:id="@+id/b2"
	          android:layout_margin="2sp"
	          android:background="@drawable/b1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            
            android:text="@string/b"/>
	      <Button
	          
	           android:id="@+id/b3"
	           android:layout_margin="2sp"
	           android:background="@drawable/b1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            
            android:text="@string/c"/>
	    
	</LinearLayout>
	    

	<LinearLayout 
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content" >
	    
	     <Button
	          android:id="@+id/b4"
	          android:layout_margin="2sp"
	          android:background="@drawable/b1"
	       
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           
            android:text="@string/d"/>
	     <Button
	          android:id="@+id/b5"
	          
	         
	  android:layout_margin="2sp"
	          android:background="@drawable/b1"
	          
	         
	        
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        
            android:text="@string/e"/>
	      <Button
	           android:id="@+id/b6"
	           android:layout_margin="2sp"
	           android:background="@drawable/b1"
	          
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            
            android:text="@string/f"/>
	    
	    </LinearLayout>
    

	<LinearLayout 
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content" >
	    
	     <Button
	          android:id="@+id/b7"
	          android:layout_margin="2sp"
	          android:background="@drawable/b1"
	          
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
          
            android:text="@string/g"/>
	     <Button
	          android:id="@+id/b8"
	          android:layout_margin="2sp"
	          android:background="@drawable/b1"
	   
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            
            android:text="@string/h"/>
	      <Button
	           android:id="@+id/b9"
	           android:layout_margin="2sp"
	           android:background="@drawable/b1"
	           
	           
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
         
            android:text="@string/i"/>
	      
	     
	    
	</LinearLayout>
	
	<LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content" >

	    <Button
	        android:id="@+id/b0"
	        android:layout_margin="2sp"
	        android:background="@drawable/b1"
	       
	        android:layout_width="199dp"
	        android:layout_height="match_parent"
	        android:text="@string/l" />
	    
	</LinearLayout>
	
	
	
	
	
	
	</LinearLayout>
	<LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
	    
	<LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content" >
	    
	    
	     <Button
	         android:id="@+id/badd"
	         android:layout_margin="2sp"
	         android:background="@drawable/b1"
	         
	        android:layout_width="53dp"
	        android:layout_height="102dp"
	        android:text="@string/j" />
	     
	      <Button
	          android:id="@+id/bsub"
	          android:layout_margin="2sp"
	          android:layout_width="53dp"
	          android:background="@drawable/b1"
	         
	        
	        android:layout_height="102dp"
	        android:text="@string/k" />
	
	</LinearLayout>
	
      <LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    
	     >
	    
	    
	     <Button
	         android:id="@+id/bmul"
	         android:layout_margin="2sp"
	         android:background="@drawable/b1"
	         
	         
	    android:layout_width="53dp"
	        android:layout_height="102dp"
	        android:text="@string/m" />
	     
	      <Button
	          android:id="@+id/bdiv"
	          android:layout_margin="2sp"
	          android:background="@drawable/b1"
	          
	        android:layout_width="53dp"
	        android:layout_height="102dp"
	        android:text="@string/n" />
	
	</LinearLayout>
      
      
	</LinearLayout>
	
     </LinearLayout>
    <LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content" >
	     <Button
	        android:id="@+id/beq"
	        android:background="@drawable/buttoneq"
	        android:layout_margin="4sp"
	        android:paddingLeft="10sp"
	        android:paddingRight="10sp"
	        android:fadingEdge="horizontal"
	        android:shadowRadius="4"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/o" />
	    
	    
	  
	  </LinearLayout>
	<TextView 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    
	    android:id="@+id/tv2"
	    />
</LinearLayout>
